--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </li>
         </ul>
       </nav>
-      <h1 class="header__title">
+      <h1 class="header__title heading">
         no focus
       </h1>
       <p class="header__subtext title-decor">
@@ -60,104 +60,238 @@
       </p>
     </header>
     <main class="content wrapper-main">
-      <section class="content__section">
+      <section class="content__section adaptive">
         <h2 class="content__section-title section-title-decor">
           Почему сосредоточиться так сложно?
         </h2>
-        <article class="content__text-section">
-          <h3 class="content__subtitle title-decor">
-            Многозадачность
-          </h3>
-          <p class="content__textblock">
-            Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи 
-            <a 
-            href="https://dana.org/article/multicosts-of-multitasking/" 
-            target="_blank"
-            class="content__link">
-            выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
-          </p>
-          <h3 class="content__subtitle title-decor">
-            Дофамин
-          </h3>
-          <p class="content__textblock">
-            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
-          </p>
-        </article>
-      </section>
-      <section class="content__section no-change">
-        <h2 class="content__section-title section-title-decor">
-          Что снижает концентрацию внимания?
-        </h2>
-        <article class="content__text-section">
-          <h3 class="content__subtitle title-decor">
-            Многозадачность
-          </h3>
-          <p class="content__textblock">
-            Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
-          </p>
-          <h3 class="content__subtitle title-decor">
-            Еда
-          </h3>
-          <p class="content__textblock">
-            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
-          </p>
-          <h3 class="content__subtitle title-decor">
-            Гаджеты
-          </h3>
-          <p class="content__textblock">
-            Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
-          </p>
-        </article>
+        <ul class="content__text-section">
+          <li class="content__text-section-item">
+            <h3 class="content__subtitle title-decor">
+              Многозадачность
+            </h3>
+            <p class="content__textblock">
+              Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи 
+              <a 
+              href="https://dana.org/article/multicosts-of-multitasking/" 
+              target="_blank"
+              class="content__link">
+              выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
+            </p>
+          </li>
+          <li class="content__text-section-item">
+            <h3 class="content__subtitle title-decor">
+              Дофамин
+            </h3>
+            <p class="content__textblock">
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
+            </p>
+          </li>
+        </ul>
       </section>
       <section class="content__section">
+        <h2 class="content__section-title section-title-decor section-title-shrink">
+          Что снижает концентрацию внимания?
+        </h2>
+        <ul class="content__text-section">
+          <li class="content__text-section-item">
+            <h3 class="content__subtitle title-decor">
+              Многозадачность
+            </h3>
+            <p class="content__textblock">
+              Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
+            </p>
+          </li>
+          <li class="content__text-section-item">
+            <h3 class="content__subtitle title-decor">
+              Еда
+            </h3>
+            <p class="content__textblock">
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
+            </p>
+          </li>
+          <li class="content__text-section-item">
+            <h3 class="content__subtitle title-decor">
+              Гаджеты
+            </h3>
+            <p class="content__textblock">
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="content__section adaptive">
         <h2 class="content__section-title section-title-decor">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h2>
-        <article class="content__text-section">
-          <h3 class="content__subtitle title-decor">
-            5 простых (на самом деле не очень) советов
-          </h3>
-          <h4 class="content__mini-subtitle mini-title-decor">
-            Представьте небо и облака
-          </h4>
-          <p class="content__textblock">
-            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
-          </p>
-          <h4 class="content__mini-subtitle mini-title-decor">
-            Включите музыку
-          </h4>
-          <p class="content__textblock">
-            Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
-          </p>
-          <h4 class="content__mini-subtitle mini-title-decor">
-            Прогуляйтесь
-          </h4>
-          <p class="content__textblock">
-            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
-          </p>
-          <h4 class="content__mini-subtitle mini-title-decor">
-            Хорошо ешьте
-          </h4>
-          <p class="content__textblock">
-            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
-          </p>
-          <h4 class="content__mini-subtitle mini-title-decor">
-            Читайте
-          </h4>
-          <p class="content__textblock">
-            Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
-          </p>
-        </article>
+        <ul class="content__text-section">
+          <li class="content__text-section-item">
+            <h3 class="content__subtitle title-decor multi-section-title">
+              5 простых (на самом деле не очень) советов
+            </h3>
+          </li>
+          <li class="content__text-section-item">
+            <h4 class="content__mini-subtitle mini-title-decor">
+              Представьте небо и облака
+            </h4>
+            <p class="content__textblock">
+              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
+            </p>
+          </li>
+          <li class="content__text-section-item">
+            <h4 class="content__mini-subtitle mini-title-decor">
+              Включите музыку
+            </h4>
+            <p class="content__textblock">
+              Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
+            </p>
+          </li>
+          <li class="content__text-section-item">
+            <h4 class="content__mini-subtitle mini-title-decor">
+              Прогуляйтесь
+            </h4>
+            <p class="content__textblock">
+              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент 
+              <a 
+              href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" 
+              target="_blank"
+              class="content__link">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+            </p>
+          </li>
+          <li class="content__text-section-item">
+            <h4 class="content__mini-subtitle mini-title-decor">
+              Хорошо ешьте
+            </h4>
+            <p class="content__textblock">
+              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+            </p>
+          </li>
+          <li class="content__text-section-item">
+            <h4 class="content__mini-subtitle mini-title-decor">
+              Читайте
+            </h4>
+            <p class="content__textblock">
+              Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
+            </p>
+          </li>
+        </ul>
       </section>
       <section class="content__section">
         <h3 class="content__subtitle title-decor">
           А можно в картинках?
         </h3>
-
+        <article class="content__gallery"> 
+          <picture class="content__gallery-image">
+            <source
+              srcset="./images/sunset.png, ./images/sunset-2x.png"
+              type="image/png"
+            />
+            <source
+              srcset="./images/sunset.avif, ./images/sunset-2x.avif"
+              type="image/avif"
+            />
+            <source
+              srcset="./images/sunset.webp, ./images/sunset-2x.webp"
+              type="image/webp"
+            />
+            <img
+              src="./images/sunset.png"
+              srcset="sunset.png 1x, sunset-2x.png 2x"
+              alt="море и горы на фоне заката, рисунок"
+              loading="lazy"
+              class="content__gallery-image-item"
+            />
+          </picture>
+          <picture class="content__gallery-image ice-cream">
+            <source
+              srcset="./images/ice-cream.png, ./images/ice-cream-2x.png"
+              type="image/png"
+            />
+            <source
+              srcset="./images/ice-cream.avif, ./images/ice-cream-2x.avif"
+              type="image/avif"
+            />
+            <source
+              srcset="./images/ice-cream.webp, ./images/ice-cream-2x.webp"
+              type="image/webp"
+            />
+            <img
+              src="./images/ice-cream.png"
+              srcset="ice-cream.png 1x, ice-cream-2x.png 2x"
+              alt="мультяшные улыбающиеся шарики мороженого в тарелке с фруктами, ягодами и зонтиком для коктейля"
+              loading="lazy"
+              class="content__gallery-image-item"
+            />
+          </picture>
+          <picture class="content__gallery-image">
+            <source
+              srcset="./images/tape.png, ./images/tape-2x.png"
+              type="image/png"
+            />
+            <source
+              srcset="./images/tape.avif, ./images/tape-2x.avif"
+              type="image/avif"
+            />
+            <source
+              srcset="./images/tape.webp, ./images/tape-2x.webp"
+              type="image/webp"
+            />
+            <img
+              src="./images/tape.png"
+              srcset="tape.png 1x, tape-2x.png 2x"
+              alt="рисунок аудиокассеты в стиле ретровейв"
+              loading="lazy"
+              class="content__gallery-image-item"
+            />
+          </picture>
+          <picture class="content__gallery-image">
+            <source
+              srcset="./images/books.png, ./images/books-2x.png"
+              type="image/png"
+            />
+            <source
+              srcset="./images/books.avif, ./images/books-2x.avif"
+              type="image/avif"
+            />
+            <source
+              srcset="./images/books.webp, ./images/books-2x.webp"
+              type="image/webp"
+            />
+            <img
+              src="./images/books.png"
+              srcset="books.png 1x, books-2x.png 2x"
+              alt="чашка кофе на стопке книг, рисунок"
+              loading="lazy"
+              class="content__gallery-image-item"
+            />
+          </picture>
+          <picture class="content__gallery-image">
+            <source
+              srcset="./images/street.png, ./images/street-2x.png"
+              type="image/png"
+            />
+            <source
+              srcset="./images/street.avif, ./images/street-2x.avif"
+              type="image/avif"
+            />
+            <source
+              srcset="./images/street.webp, ./images/street-2x.webp"
+              type="image/webp"
+            />
+            <img
+              src="./images/street.png"
+              srcset="street.png 1x, street-2x.png 2x"
+              alt="широкая городская улица с двухэтажными домиками, рисунок в стиле ретровейв"
+              loading="lazy"
+              class="content__gallery-image-item"
+            />
+          </picture>
+        </article>
       </section>
     </main>
-    <footer>
-
+    <footer class="footer wrapper">
+      <h2 class="footer__title heading">
+        focus
+      </h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
