dark and light mode done

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h2 class="content__section-title section-title-decor section-title-shrink">
           Что снижает концентрацию внимания?
         </h2>
-        <ul class="content__text-section">
+        <ul class="content__text-section multi-column">
           <li class="content__text-section-item">
             <h3 class="content__subtitle title-decor">
               Многозадачность
