fixed bugs with images

--- a/index.html
+++ b/index.html
@@ -182,15 +182,15 @@
         <article class="content__gallery"> 
           <picture class="content__gallery-image">
             <source
-              srcset="./images/sunset.png,./images/sunset-2x.png"
+              srcset="./images/sunset.png"
               type="image/png"
             />
             <source
-              srcset="./images/sunset.avif,./images/sunset-2x.avif"
+              srcset="./images/sunset.avif"
               type="image/avif"
             />
             <source
-              srcset="./images/sunset.webp,./images/sunset-2x.webp"
+              srcset="./images/sunset.webp"
               type="image/webp"
             />
             <img
@@ -203,15 +203,15 @@
           </picture>
           <picture class="content__gallery-image ice-cream">
             <source
-              srcset="./images/ice-cream.png,./images/ice-cream-2x.png"
+              srcset="./images/ice-cream.png"
               type="image/png"
             />
             <source
-              srcset="./images/ice-cream.avif,./images/ice-cream-2x.avif"
+              srcset="./images/ice-cream.avif"
               type="image/avif"
             />
             <source
-              srcset="./images/ice-cream.webp,./images/ice-cream-2x.webp"
+              srcset="./images/ice-cream.webp"
               type="image/webp"
             />
             <img
@@ -224,15 +224,15 @@
           </picture>
           <picture class="content__gallery-image">
             <source
-              srcset="./images/tape.png,./images/tape-2x.png"
+              srcset="./images/tape.png"
               type="image/png"
             />
             <source
-              srcset="./images/tape.avif,./images/tape-2x.avif"
+              srcset="./images/tape.avif"
               type="image/avif"
             />
             <source
-              srcset="./images/tape.webp,./images/tape-2x.webp"
+              srcset="./images/tape.webp"
               type="image/webp"
             />
             <img
@@ -245,15 +245,15 @@
           </picture>
           <picture class="content__gallery-image">
             <source
-              srcset="./images/books.png,./images/books-2x.png"
+              srcset="./images/books.png"
               type="image/png"
             />
             <source
-              srcset="./images/books.avif,./images/books-2x.avif"
+              srcset="./images/books.avif"
               type="image/avif"
             />
             <source
-              srcset="./images/books.webp,./images/books-2x.webp"
+              srcset="./images/books.webp"
               type="image/webp"
             />
             <img
@@ -266,15 +266,15 @@
           </picture>
           <picture class="content__gallery-image">
             <source
-              srcset="./images/street.png,./images/street-2x.png"
+              srcset="./images/street.png"
               type="image/png"
             />
             <source
-              srcset="./images/street.avif,./images/street-2x.avif"
+              srcset="./images/street.avif"
               type="image/avif"
             />
             <source
-              srcset="./images/street.webp,./images/street-2x.webp"
+              srcset="./images/street.webp"
               type="image/webp"
             />
             <img
